--- a/main.ipynb
+++ b/main.ipynb
@@ -37,18 +37,46 @@
     "    \n",
     "for bucket in buckets['Buckets']:\n",
     "    print('Name: ' + bucket['Name'])\n",
-    "\n",
-    "pp.pprint(buckets)"
+    "\n"
    ]
   },
   {
    "source": [
-    "print(\"hello\")"
+    "\n",
+    "# pagination example\n",
+    "cwl = boto3.client(\"logs\")\n",
+    "\n",
+    "paginator = cwl.get_paginator('describe_log_groups')\n",
+    "page_iterator = paginator.paginate(logGroupNamePrefix=\"/aws\",\n",
+    "PaginationConfig={\n",
+    "        'MaxItems': 10000,\n",
+    "        'PageSize': 20\n",
+    "    })\n",
+    "\n",
+    "page_iterations_count=0\n",
+    "log_groups_count=0\n",
+    "for page in page_iterator:\n",
+    "    page_iterations_count+=1\n",
+    "    log_groups_count += len(page['logGroups'])\n",
+    "\n",
+    "print(f\"page_iterations_count: {page_iterations_count}, log_groups_count: {log_groups_count}\")\n",
+    "    \n",
+    "\n"
    ],
    "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": []
+   "metadata": {
+    "tags": []
+   },
+   "execution_count": 23,
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "page_iterations_count: 5, log_groups_count: 165\n"
+     ]
+    }
+   ]
   }
  ]
 }
