AWS Step Functions Data Science SDK example

--- a/main.ipynb
+++ b/main.ipynb
@@ -67,15 +67,63 @@
    "metadata": {
     "tags": []
    },
-   "execution_count": 23,
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "page_iterations_count: 5, log_groups_count: 165\n"
-     ]
-    }
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# AWS Step Functions Data Science SDK Example\n",
+    "# https://aws-step-functions-data-science-sdk.readthedocs.io/\n",
+    "\n",
+    "import stepfunctions\n",
+    "import logging\n",
+    "\n",
+    "from stepfunctions.steps import *\n",
+    "from stepfunctions.workflow import Workflow\n",
+    "\n",
+    "stepfunctions.set_stream_logger(level=logging.INFO)\n",
+    "\n",
+    "workflow_execution_role = \"arn:aws:iam::529276214230:role/StepFunctionsWorkflowExecutionRole\" # paste the StepFunctionsWorkflowExecutionRole ARN from above\n",
+    "\n",
+    "start_pass_state = Pass(\n",
+    "    state_id=\"MyPassState\"             \n",
+    ")\n",
+    "\n",
+    "# First we chain the start pass state\n",
+    "basic_path=Chain([start_pass_state])\n",
+    "\n",
+    "basic_workflow = Workflow(\n",
+    "    name=\"MyWorkflow_Simple\",\n",
+    "    definition=basic_path,\n",
+    "    role=workflow_execution_role\n",
+    ")\n",
+    "\n",
+    "#Render the workflow\n",
+    "basic_workflow.render_graph()\n",
+    "\n",
+    "print(basic_workflow.definition.to_json(pretty=True))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#basic_workflow.create()\n",
+    "\n",
+    "basic_workflow_execution = basic_workflow.execute()\n",
+    "\n",
+    "basic_workflow_execution.render_progress()\n",
+    "\n",
+    "basic_workflow_execution.list_events(html=True)\n",
+    "\n",
+    "# generates an AWS CloudFormation Template to deploy your workflow.\n",
+    "#get_cloudformation_template()"
    ]
   }
  ]
