get_cloudformation_template fix

--- a/main.ipynb
+++ b/main.ipynb
@@ -110,11 +110,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\u001b[33m[WARNING] To reuse the CloudFormation template in different regions, please make sure to update the region specific AWS resources in the StateMachine definition.\u001b[0m\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'AWSTemplateFormatVersion: \\'2010-09-09\\'\\nDescription: CloudFormation template for AWS Step Functions - State Machine\\nResources:\\n  StateMachineComponent:\\n    Type: AWS::StepFunctions::StateMachine\\n    Properties:\\n      StateMachineName: MyWorkflow_Simple\\n      DefinitionString: |-\\n        {\\n          \"StartAt\": \"MyPassState\",\\n          \"States\": {\\n            \"MyPassState\": {\\n              \"Type\": \"Pass\",\\n              \"End\": true\\n            }\\n          }\\n        }\\n      RoleArn: arn:aws:iam::529276214230:role/StepFunctionsWorkflowExecutionRole\\n'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
    "source": [
-    "#basic_workflow.create()\n",
+    "basic_workflow.create()\n",
     "\n",
     "basic_workflow_execution = basic_workflow.execute()\n",
     "\n",
@@ -123,7 +141,7 @@
     "basic_workflow_execution.list_events(html=True)\n",
     "\n",
     "# generates an AWS CloudFormation Template to deploy your workflow.\n",
-    "#get_cloudformation_template()"
+    "basic_workflow.get_cloudformation_template()"
    ]
   }
  ]
